examples/test/testpolicy9684.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9684
  namespace: namespace61
spec:
  podSelector:
    matchLabels:
      key38: value41
      key22: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value4
          key39: value8
      podSelector:
        matchLabels:
          key13: value32
